# fcc-hardware

./: .gitignore  README.md
DAQ/pyGUI_Teledyne/: GUI_T3DSO2304.py  launcher_GUI_T3DSO2304.bat
DAQ/pyGUI_Teledyne/.ipynb_checkpoints/: launcher_GUI_T3DSO2304-checkpoint.bat
DAQ/py_Tektronix/: MSO_com.ipynb  mdo_simple_plot.py
DAQ_dso_teledyne/: launcher_GUI_T3DSO2304.bat
DAQ_dso_teledyne/.ipynb_checkpoints/: GUI_T3DSO2304-checkpoint.ipynb
DAQ_dso_teledyne/history/.ipynb_checkpoints/: GUI_BELLE2-safe-20231228-checkpoint.ipynb
DAQ_dso_teledyne/temp/: GUI_BELLE2.py  Untitled.ipynb
Tektronix/: mdo_simple_plot.py  sample_1.wfm  sample_ff1.wfm  sample_ff2.wfm  tekwfm.py  tekwfm_usage_example.py
analysis/: Cell_occupancy.ipynb
analysis/.ipynb_checkpoints/: Cell_occupancy-checkpoint.ipynb
analysis/caen/: A5202_calibration_with_LED_table.csv
analysis/dso/: calibrazioni.ipynb
analysis/waveforms/: BGO_con_filtri_UV.ipynb  BGO_letto_da_due_SiPM.ipynb
analysis/waveforms/.ipynb_checkpoints/: BGO_con_filtri_UV-checkpoint.ipynb  calibrazioni_13360-6075_SER-checkpoint.ipynb
cherenkov-and-scintillation-spectra/: algo.ipynb
cherenkov-and-scintillation-spectra/SiPM_pde/: 13360-3050pe_pde.csv
cherenkov-and-scintillation-yields/: plots_and_Yields.ipynb
cherenkov-and-scintillation-yields/temp/: Cherenkov_LY_new.ipynb  algo.ipynb  small_.ipynb
cherenkov-and-scintillation-yields/temp/.ipynb_checkpoints/: Cherenkov_LY_new-checkpoint.ipynb
cosmic-rate/: BGO_dati.ipynb  Classe_2verticali_Efficienze.ipynb  Classe_cristallo_in_verticale.ipynb  Configurazione_con_efficienze.ipynb  Configurazione_in_verticale.ipynb  Efficienze.ipynb  Filtro_1.ipynb  Hyp_Test.ipynb  PMMA_dati.ipynb  PWO_dati.ipynb  README.md
cosmic-rate-simulation/: lista.ipynb  torre.ipynb
crystals-optical-characterization/: crystal-emission.ipynb  emission-transmittance-analysis.ipynb  filter-transmittance.ipynb
crystals-optical-characterization/.ipynb_checkpoints/: filter-transmittance-checkpoint.ipynb
crystals-optical-characterization/20240118_filter-and-crystal_transmittance/: 100% or 0 Absorbance Baseline(1).Correction.sp  100% or 0 Absorbance Baseline.Correction.sp  Sample2724.Sample.sp  Sample2738CriPWO 665 air.Sample.sp  Sample400 reverse.Sample.sp  Sample400.Sample.sp  Sample550.Sample.sp  Sample610.Sample.sp  Sample665.Sample.asc  Sample665.Sample.sp  Sample715.Sample.sp  SampleBG3.Sample.asc  SampleBG3.Sample.sp  SampleCrBGOorizzontale.Sample.sp  SampleCrBSO.Sample.sp  SampleCrBSOorizzontale.Sample.sp  SampleCrPWOorizzontale.Sample.sp  SampleCriBGO.Sample.sp  SampleCriBGO_UG1 air.Sample.sp  SampleCriBGO_UG1 grasso.Sample.sp  SampleCriPWO 665 grasso.Sample.sp  SampleCriPWO.Sample.sp  SampleUG1.Sample.sp  SampleUG11.Sample.sp  Thumbs.db
crystals-optical-characterization/20240118_filter-and-crystal_transmittance/temp/: 100% or 0 Absorbance Baseline.Correction.Raw.sp  Info.txt  Results Table.csv  Sample Table.csv  Sample2722.Sample.Raw.sp  Sample2723.Sample.Raw.sp
crystals-optical-characterization/crysta_transmittance/: transmittance.ipynb
crystals-optical-characterization/crystal_transmittance/: BGO.Sample.csv  GAGG.Sample.csv  LYSO.Sample.csv  PWO.Sample.csv  transmittance.ipynb
crystals-optical-characterization/emission/: emission.ipynb
data_analysis/test_beam_analysis/: Cherenkov Yield.ipynb  Cherenkov_Angle_scan.py  README.md  Validation.ipynb  Validation.py  __init__.py  count-events  data.yaml  info-run  library.py  link_logbook  make_yaml.py  plot_amplitude.py  save_parquet_npy.py  waveform.py
data_analysis/test_beam_analysis/midas/: CMakeLists.txt  Makefile  bitbucket-pipelines.yml  testexpt.example
data_analysis/test_beam_analysis/midas/examples/: CMakeLists.txt
data_analysis/test_beam_analysis/midas/examples/epics/: CMakeLists.txt  frontend.cxx
data_analysis/test_beam_analysis/midas/examples/eventbuilder/: CMakeLists.txt  Makefile  ebfe.cxx  ebuser.cxx  mevb.cxx
data_analysis/test_beam_analysis/midas/include/: history.h  mfe.h  midas.h  midas_c_compat.h  mrpc.h  msystem.h  odbxx.h  sequencer.h  tmfe.h
data_analysis/test_beam_analysis/midas/msetpoint/: CMakeLists.txt  epics_fe.cxx  help.html  meg.json  msetpoint.html  msp_config.html  pie1.json  pie5.json  pim1.json  pim3.json  psi_minimal_beamline.json
data_analysis/test_beam_analysis/midas/progs/: CMakeLists.txt  fetest.cxx  lazylogger.cxx  mdump.cxx  melog.cxx  mh2sql.cxx  mhdump.cxx  mhttpd.cxx  mlogger.cxx  msequencer.cxx  mserver.cxx  msysmon.cxx  odbedit.cxx  odbhist.cxx  odbinit.cxx  tmfe_example_everything.cxx
data_analysis/test_beam_analysis/midas/python/: README.md
data_analysis/test_beam_analysis/midas/resources/: config.html  controls.js  custom_example.html  edit_script.html  eqtable.html  eqtable.js  event_dump.html  example.html  filesrw.js  history.html  hs_edit.html  mhistory.js  mhttpd.js  midas.css  midas.js  mihistory.js  mplot.js  odb.html  odb_scl.html  odbbrowser.js  plot_example.html  sequencer.html  sequencer.js  sequencer_v1.html  sequencer_v1.js  start.html
data_analysis/test_beam_analysis/midas/src/: alarm.cxx  fakezlib.cxx  history.cxx  history_common.cxx  mana.cxx  (+13 more)
data_analysis/waveforms/: BGO_con_filtri_UV.ipynb  BGO_horizzontal.ipynb  BGO_letto_da_due_SiPM.ipynb  BGO_verticale.ipynb  calibrazioni_13360-6075_SER.ipynb
data_analysis/waveforms/.ipynb_checkpoints/: BGO_con_filtri-checkpoint.ipynb  calibrazioni_13360-3050_CAEN-checkpoint.ipynb
sim/opcaracter/: grph.ipynb
sim/opcaracter/opcara/: Sample2738CriPWO665air.Sample.asc  Sample400.Sample.asc  Sample400reverse.Sample.asc  Sample610.Sample.asc  SampleCrBGOorizzontale.Sample.asc  SampleCrBSO.Sample.asc  SampleCrBSOorizzontale.Sample.asc  SampleCrPWOorizzontale.Sample.asc  SampleCriBGO_UG1 air.Sample.asc  SampleCriPWO665grasso.Sample.asc  SampleUG11.Sample.asc
sim/orizzontale/: Classe.py  Main.ipynb  Plot.py  espe.ipynb  funz.py  vs.ipynb
sim/verticale/: Classe.py  Main.ipynb  Plot.py  espe.ipynb  funz.py  main.py  vs.ipynb
sim/verticale/filtri/: BGOug1.asc
(+33 files in other folders)
